Fix #1 Added media queries so mobile view is called when the viewport is the correct size. Fixed dimensions of some elements on the main page, Changed info text color in dark mode, Home links dont have /index.html anymore

--- a/resources/css/dark.css
+++ b/resources/css/dark.css
@@ -57,6 +57,7 @@ body.dark{
 .info-inner.dark{
 }
 .info-inner-content.dark{
+  color: hsl(200,10%,90%);
 }
 .content.dark{
 }
